# hearth

./: CLAUDE.md  README.md  conftest.py  pyproject.toml
docs/architecture/: 0001-vision.md  0002-deployment-model.md  0003-plugin-model.md  0004-sdk-first.md  0005-primitives.md  0006-orm-contract.md  0007-transactional-contract.md  0008-built-in-plugins.md
docs/core/: README.md  fields.md  identifiers.md  references.md  unit-of-work.md
docs/core/kernel/: README.md  migrations.md  outbox.md  persistence.md  registry.md  transaction.md
docs/core/plugins/: auth.md
docs/core/primitives/: README.md  action.md  actor.md  entity.md  event.md  identity.md  job.md  value.md  view.md
docs/core/testing/: README.md  harness.md
hearth/: __init__.py  agg.py  constraints.py  errors.py  fields.py  identifiers.py  references.py  unit_of_work.py
hearth/cli/: __init__.py  _db.py  _plugins.py
hearth/kernel/: __init__.py  _engine.py  persistence.py  query.py  registry.py  transaction.py
hearth/primitives/: __init__.py  action.py  actor.py  entity.py  event.py  identity.py  value.py
hearth/testing/: __init__.py  _base.py  base.py  harness.py  in_memory_harness.py  postgres_harness.py
plugins/: README.md
plugins/auth/: pyproject.toml
plugins/auth/hearth_auth/: __init__.py  _base.py  cli.py  helpers.py
plugins/auth/hearth_auth/actions/: __init__.py  api_key.py  permission.py  role.py  user.py  user_auth.py
plugins/auth/hearth_auth/entities/: __init__.py  api_key.py  api_key_permission.py  permission.py  role.py  role_permission.py  user.py  user_role.py
plugins/auth/hearth_auth/events/: __init__.py  api_key.py  permission.py  role.py  user.py
plugins/auth/hearth_auth/testing/: __init__.py
plugins/auth/hearth_auth/values/: __init__.py  hashed_secret.py  permission_name.py
plugins/auth/tests/: test_api_key_actions.py  test_authentication.py  test_bootstrap_cli.py  test_cross_plugin_enforcement.py  test_entities_basic.py  test_entities_joins.py  test_has_permission.py  test_helpers.py  test_role_permission_actions.py  test_user_actions.py  test_values.py
plugins/commons/: pyproject.toml
plugins/commons/hearth_commons/: __init__.py  email.py  phone.py
plugins/commons/tests/: test_email.py  test_phone.py  test_smoke.py
tests/: test_action.py  test_actor.py  test_bases_for.py  test_cli.py  test_composite.py  test_engine.py  test_entity.py  test_event.py  test_event_plugin_kwarg.py  test_identifiers.py  test_identity.py  test_inmemory_uow.py  test_postgres_uow.py  test_query.py  test_references.py  test_registry.py  test_smoke.py  test_transaction_factory.py  test_value.py
