[project]
name = "hearth"
version = "0.0.1"
description = "A domain-agnostic business kernel with an SDK-first plugin contract."
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "python-ulid>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
commons = ["hearth-commons"]
auth = ["hearth-auth"]
all = ["hearth-commons", "hearth-auth"]

[project.scripts]
hearth = "hearth.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hearth"]

[tool.uv.workspace]
members = ["plugins/commons", "plugins/auth"]

[tool.uv.sources]
hearth-commons = { workspace = true }
hearth-auth = { workspace = true }

[dependency-groups]
dev = [
    # Workspace plugins installed for development; production users opt in via
    # extras (`pip install hearth[commons]`).
    "hearth-commons",
    "hearth-auth",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    # pgserver intentionally omitted: no cp313 wheel as of 2026-05-02.
    # Tests expect DATABASE_URL pointing at a real Postgres for the slice.
    # Revisit once pgserver ships 3.13 support, or swap to testcontainers if
    # CI portability becomes urgent.
    "ruff>=0.6",
    "basedpyright>=1.18",
    "aiosqlite>=0.22.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF", "SIM"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]

[tool.ruff.lint.isort]
# Treat workspace plugins as first-party so all hearth* imports group together
# instead of fragmenting into "kernel = first-party, plugins = third-party".
known-first-party = ["hearth", "hearth_commons", "hearth_auth"]

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
include = [
    "hearth",
    "plugins/commons/hearth_commons",
    "plugins/auth/hearth_auth",
    "scripts",
]
exclude = ["**/tests/**", "**/.venv/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "plugins/commons/tests", "plugins/auth/tests"]
addopts = ["-ra", "--strict-markers", "--import-mode=importlib"]
