[project]
name = "hearth-commons"
version = "0.0.1"
description = "Common business vocabulary as Hearth values: Money, Address, PhoneNumber, EmailAddress."
requires-python = ">=3.13"
dependencies = ["hearth"]

[tool.uv.sources]
hearth = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hearth_commons"]
